# EDGAR

./: .project  README.md  pyproject.toml
EDGAR/: EDGAR.py  requirements.txt
